--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".MenuActivity" android:screenOrientation="landscape"/>
+        <activity android:name=".MenuActivity" android:noHistory="false" android:screenOrientation="landscape"/>
         <activity android:name=".authentication.RegisterActivity" android:screenOrientation="landscape"/>
         <activity android:name=".authentication.LoginActivity" android:screenOrientation="landscape"/>
         <activity android:name=".game.GameOptionsActivity" android:screenOrientation="landscape"/>
